# FractalCodingLib

./: CMakeLists.txt
include/: FEL_codebookentry.h  FEL_core_gpu.h  FEL_decoder.h  FEL_decoder_gpu.h  FEL_domain.h  FEL_domain_core.h  FEL_encodedhistogram.h  FEL_encodedsimplehistogram.h  FEL_encoder.h  FEL_encoder_dct.h  FEL_encoder_incremental.h  FEL_encoder_localsearch.h  FEL_encoder_timevarying.h  FEL_incremental_gpu.h  FEL_matlab.h  FEL_range.h  FEL_segmenttree.h  FEL_segmenttree2.h  FEL_segmenttreenode.h  FEL_spacetree.h  FEL_spacetree_timevarying.h  FEL_spacetreenode.h  FEL_spandecomposition.h  FEL_transformation.h  FEL_util.h  Spans.h
src/: FEL_codebookentry.cpp  FEL_core_gpu.cu  FEL_decoder.cpp  FEL_decoder_gpu.cu  FEL_domain_core.cpp  FEL_encodedhistogram.cpp  FEL_encodedsimplehistogram.cpp  FEL_encoder_dct.cpp  FEL_encoder_incremental.cpp  FEL_encoder_localsearch.cpp  FEL_matlab.cpp  FEL_segmenttree2.cpp  FEL_segmenttreenode.cpp  FEL_spandecomposition.cpp  FEL_transformation.cpp
